<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.myPage.MyPageActivity">

    <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/myPageActivity_progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/myPageActivity_btn_myUpload"
                android:text="@string/my_upload_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/myPageActivity_btn_likeFashion"
                android:text="@string/post_liked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/myPageActivity_btn_dislikeFashion"
                android:text="@string/post_disliked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myPageActivity_fab_add"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_add_white_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</RelativeLayout>