<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
                name="viewmodel"
                type="com.shimsoon.today_i_dressedup.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_marginBottom="30dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@id/linear_layout_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_margin="16dp"
                android:id="@+id/linear_layout_input"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewmodel.email}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedPasswordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
                android:id="@+id/button_login"
                android:onClick="@{() -> viewmodel.login()}"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_input"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        </Button>

        <TextView
                android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>